# ISAC_project

./: .gitignore  README.md
Communication/: OFDM.py  Synchronization.py  channel.py  generate_preamble.py  mapping.py  radcom_OFDM.py
Communication/USRP/: emitter.py  multi_usrp.py  receiver.py
Communication/preamble_files/: Preamble.mat
Communication/wifi/: L_LTF.py  L_SIG.py  L_STF.py  SIG_A_1_2.py
New_setup/: NS_Radar_packets_gen_WIFI_80MHz.py  NS_Radar_packets_rx_analysis_WIFI_80MHz_final.py
RX_desktop/: What To Do.txt
RX_desktop/RAMDisk_Original_version_2/: CMakeLists.txt  convert.m  read_complex_binary.m
RX_desktop/RAMDisk_Original_version_2/build-dir/: CMakeCache.txt  Makefile
TX_desktop/: What To Do.txt  ethsetup.sh  tips
TX_desktop/RAMDisk_Original_version_2/: What To Do.txt  adv_rx_to_file.cpp  test_signal.txt  wavetable.hpp
TX_desktop/RAMDisk_Original_version_2/build-dir/: adv_rx_to_file  cmake_install.cmake  tx_waveforms_radar
